create github pages

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         <div class="row justify-content-center">
             <div class="mbr-white col-md-12 col-lg-11">
                 <h2 class="mbr-section-title mbr-white align-left pb-2 mbr-fonts-style display-2"><strong>LIVE TV IS FOREVER CHANGING</strong></h2>
-                <p class="mbr-text pb-4 mbr-white mbr-regular align-left mbr-fonts-style display-2">Join The Movement<br>
+                <p class="mbr-text pb-4 mbr-white mbr-regular align-left mbr-fonts-style display-5">It's time for you to join the movement! For only $25 you can have all of these channels<br>
                 </p>
             </div>
         </div>
@@ -848,7 +848,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pdniI931TPqPpD1/JTvIVeNMrDnea/qV6Kj9H0ZoVH5FKTPs9cWuQagFWz0T38KZpQ2xDlxQg5HjBZn6zIT17JvEwOcNHZLXvnaj41YAqXsYQ2r2H02axYG8SMfCpb7H.g5K+uzihUuUhLEGf00vt7VwEvwnX3+mNFNpHPNGlMj04OACPqBJF7Ve07LIvWyTiRJ3J1wJDBhdXVhO7fV7O39llqyZVwsU4IHa38/OKdedizoWreTlHlrlSOMM7IC1H">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="a6VlZocCuXYbj/Yk8jlQvESOmLjGg0ScBFVw7ZjuulR62vdTFD6+UglZQTnGUQInxs5KAN3hxppQLo09l014+0idVXRIYcVbS8fiQvrrUeTITE4DCav3KVZwuceiPyDc.cOZJcFZsRDH/yDDKUoWUpbe0Cjl8ANL6Yrf1cpxfnvp6wT00AorZvOFQCj5BeSCAVF6GE8+ettk8U9kZD0J2lRwyJJCvpBsMpla9Uzj5tthvFi8YKYiZpAgkeMWQEMML">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
