--- a/page1.html
+++ b/page1.html
@@ -43,7 +43,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#video1-1">How it work</a>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#video1-1">How It Works</a>
                     </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#pricing-table1-6">Plans</a></li>
                     <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#video1-7">Setup</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page2.html">Live Channels</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">Support</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#accordions1-g">FAQ &nbsp; &nbsp;</a></li></ul>
                 
@@ -131,7 +131,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VI+jd3tunjFFAMibXWvymj/MBxs3xGKXisInFQ4ObeGcBAR3cXi/ccNexHGjdvEl90QL0s9wQHxZ0aABlUtg3AwqQHYWbXdhM9lvNt1DYxXTbeK9MQrFJcj3nwKK6QAS.GTiX435KfDmbb/qvUf8b7mtlnrsOpXWaEb/XhRRlWGnDeQJNTxRuf2T/XKZENGSAJw3iPddY57HBhPxY3tI7iQS3MLSiExEUu4GHNznZDD99bNDuoDrx+v2ZkCmXVoFY">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="whnAPdlr/fjWUr7arLEEAIh8nOR16C/j7Vhvh530g7ls+W2wcO/Q/XDjJdv4xtH/RAnNPkXb1hWTaaan39HMBV0tTCKni5kH1ueRHM8KSMdY9x83dDLbJZzTFMsp5yGD.t5yP958NVIKQJgDcCfS8BUdo2D4xhPR75X9TqujSW59bJewdhTifb/EWSeG0k385/qO3ImPb/7vvYljIZPpvEVD3mUo+GqFXoOT10zYS84+hUzZ2w8qryGXSzqyUufl2">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
