--- a/page2.html
+++ b/page2.html
@@ -43,7 +43,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#video1-1">How it work</a>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#video1-1">How It Works</a>
                     </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#pricing-table1-6">Plans</a></li>
                     <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#video1-7">Setup</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page2.html">Live Channels</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">Support</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#accordions1-g">FAQ &nbsp; &nbsp;</a></li></ul>
                 
@@ -653,7 +653,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OfmjA9c4JzK0vYBy3UtKi43606+3x3hkDmzYnZwtnpi/GAkwIjCjZh/dNW312hK8RS+Psy0xKdTZ/21whfWFkVenBSPAUviUD+AWBpf+AnLXiTK/mBntPDlyyFE7KSY0.RXA8j/w+ff4T0cv6l4gAvYUDSbrZEusCu+dtKRohZWR0Z3PRLRxKAa7lIHUBQS3IMDQtCpYFZXRdkkUNxUFN4SErz643kTnA5AB+A0sBgWa5nHgVN7hW6aBlHkqq4F07">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GUiWprSnLMZ7qSLpBUDkOWb+tKR4AUZAdHJ5QEj2pIgt5NmauAdCFcPg3gJr0EMQW+wFmn0Nc3GmyL1uV27H9vgsay1iGY13iwVpci8UEDw0nv8qJxxkCC4WD7tVQRdc.07+Mdl65Ww5ncaeO7nhqNwVBg0D06cFAYK4Cj7sOM01PgsWUe5wlvmwOnmYR5qXShiYHVI47dFmIl4d4Cc3y7haAvoGVBrqWxwo8dGHmLmA4wTueH1Qwl11Xa2rYmQvf">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
