create github pages

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                 
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1"><span style="font-weight: 900;">A NEW STREAMING EXPERIENCE</span></h1>
-                <p class="mbr-text pb-3 mbr-white mbr-light mbr-fonts-style display-7">One box that gives you access to all of the latest Movies and all your favorite Channels! Don't waste time</p>
+                <p class="mbr-text pb-3 mbr-white mbr-light mbr-fonts-style display-7">One box that gives you access to all of the latest Movies and all your favorite Channels! Don't waste time, join today!</p>
                 <div class="mbr-section-btn"><a class="btn btn-sm btn-primary-outline display-4" href="index.html#pricing-table1-6"><span class="mobi-mbri mobi-mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>GET STARTED NOW</a></div>
 
             </div>
@@ -163,7 +163,7 @@
                     <div class="card-box align-center">
 
                         <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">User Friendly</h4>
-                        <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">All of this offered to you in a Simple box, with a straiforward Subscription fee and no Cable Deal confusion talk</p>
+                        <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">All of this offered to you in a Simple box, with a straightforward Subscription fee and no confusing Cable deals with restrictions</p>
 
                         <div class="link-wrapper">
                             <a href="index.html#pricing-table1-6"><span class="mbr-iconfont mobi-mbri-right mobi-mbri"></span></a>
@@ -227,7 +227,7 @@
             <div class="col-lg-6 content col-md-12 md-pb">
                 <div class="title-wrapper align-left">
                     <div class="line"></div>
-                    <h3 class="mbr-section-title mbr-white mbr-semibold pb-3 mbr-fonts-style display-5"><strong>OUR CUSTOMERS TESTIONIALS</strong></h3>
+                    <h3 class="mbr-section-title mbr-white mbr-semibold pb-3 mbr-fonts-style display-5"><strong>OUR CUSTOMERS TESTIMONIALS</strong></h3>
                     
                 </div>
                 <div class="row">
@@ -874,7 +874,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RcczjtqBRByJzBpEkRoHPiyQdraNix6P9hgo5ldFIwKDdJOR11qVlA1ZC5OAc6Xr6DCWMO7ZbZvGkDiNiQI/z/gX4Wh3FepAOph+npgJAhikh/evnfCsTo2dq3WJe9ar.ywWg8ZWmDZptXs1h3y1UqJpphgMzzygYH3hEK5JuePt2bj+nOVR/16ZWSkHC3ZUJBENYcvcwxVQrZA9/JPiBr5jnO2bmrk0W54ENJKrKD8vlpHiOx24IsrJsqIPO1XWO">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="in9jaid5/9+AHGw8Hi1PpEzr1UjcZSaD0xspP3reP2z7nnv+qAVt3qv2szc1TY8J35ybU/e6w2AGsPzZLaEjYDDQF2aWD7UrFHPd9UWzp0Vd6hISBIrjlHv1VV0omgqc.IT0Nyl/CXWQtMvn3qJToL5z9/4EHpuyz53JPnWQZjrSKrN7gtSB1qfLd4rJdbKYoNr2nB4h5RWHAWm5pjD8T7vj8Y5ywsdPh3sBeZOvqTXx2xK+GtU1sBGe8fFoKDzu5">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
