--- a/page1.html
+++ b/page1.html
@@ -37,7 +37,7 @@
                         <img src="assets/images/image-8-122x118.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">AVM BOX</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">AVM</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -145,7 +145,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dCAVL4JdHz1AvfQnke23BDUK/2e/n4YRIcqC5DbnVPXLojrO0PF3B5ltuaw1FIXIglNhnppNOwRCqcOWB175lJwgHsb+woSHL/h/ykFsk+gkDoQQ0W9M/QW44GDml1gl.slcT1vUUtr1SoY3GkeLDGLx/jK29G42WzsmbrAX/zXoymx1DGl3XdVmAinHcoGmTI/c68ql9Cii6VfCSpShe1KEBEDppjZllWpHFXf67gBMEtoBgyB+LsVUPJBAnr0On">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XfXzB08VrfJx2kfHazIqgsEX//dfee3N3IYPNhdFTyunhxx7KkodlH2BJN0fL+lpe1HwPgl4Pa4SK6VWOS8j34D0Xb5y/EFTufSXU1KDxNfgQQxNSdgF2OdksGAGMss6.ugPeV7CZBVHC2IpVqx8SQm4CH7tfIfaZ9xDeRnD7x/CzZyVTw7utmH7+oiEk9A+hsoxlvIDn+z4b1d/NPkQFZjL6pQeTXbFerM0DGAF6CIZASorEhgIjSwcXglhcgczJ">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
