create github pages

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   
   
   <title>Home</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -65,7 +65,7 @@
                     </li>
                     <li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#accordions1-g">FAQ</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary-outline display-4" href="index.html#pricing-table1-6"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>BUY NOW</a></div>
+                <form name="PrePage" method="post" action="https://Simplecheckout.authorize.net/payment/CatalogPayment.aspx"> <input type="hidden" name="LinkId" value="0c103a31-fd2a-4ab7-91ad-2893aa719b81"> <input type="image" src="//content.authorize.net/images/buy-now-gray.gif"> </form>
             </div>
         </div>
     </nav>
@@ -427,7 +427,7 @@
                             
                         </div>
                     </div>
-                    <form name="PrePage" method="post" action="https://Simplecheckout.authorize.net/payment/CatalogPayment.aspx"> <input type="hidden" name="LinkId" value="0c103a31-fd2a-4ab7-91ad-2893aa719b81"> <input type="image" src="//content.authorize.net/images/buy-now-gold.gif"> </form>
+                    <form name="PrePage" method="post" action="https://Simplecheckout.authorize.net/payment/CatalogPayment.aspx"> <input type="hidden" name="LinkId" value="0c103a31-fd2a-4ab7-91ad-2893aa719b81"> <input type="image" src="//content.authorize.net/images/buy-now-gray.gif"> </form>
                     </div>
                 </div>
             </div>
@@ -862,7 +862,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="H2Wi+1L/l1QuJUuudfiIxrnB1pOriky9Ny5WcOi7yZdDh1QQuDBqVRvpBk10nh1gF60RLp0o2VMjUs/Ipsya9fQuFsUg2OlDTVwgswW7m0vCGgo3C3v9lToe5/lcaz14.JAFUknG02o+JtVIx5EvqHJ1oe3OqXYCdfiYGgI/Kmls5Us3syHJYSXY6xoO+0USQiMsm34Xp09r8tA+BeXIMQ1GN80cZ3N4jjXMoaUiIfwS11USLaU55cwfu7f5m+M6t">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sNV7butcEK8kJ0dORDVNlcFfmg685qr6D4rIkW5GxLdsj8/H/sFu1PmLkIT7ci9uBrBLLj8tQIG1omhchNjDekxCsrSSaMifs7faB4yLirdF9R7tVezxD3CsLGFcZkPJ.Y7jGiahGIhrs2xZbwegYXsiWVo8Uid2JBOWfDwOyhKehB/N9CZvvHaJxpea2DELzCGUJDvMW02VfFI6vOJ0TK08QJzoiun6Lw8gqcA2OaTuEnT9dwI1ck9pADkz+vfVD">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
