--- a/page1.html
+++ b/page1.html
@@ -12,7 +12,6 @@
   
   <title>About Us</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -61,7 +60,7 @@
                     </li>
                     <li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#accordions1-g">FAQ</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary-outline display-4" href="index.html#pricing-table1-6"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>BUY NOW</a></div>
+                <form name="PrePage" method="post" action="https://Simplecheckout.authorize.net/payment/CatalogPayment.aspx"> <input type="hidden" name="LinkId" value="0c103a31-fd2a-4ab7-91ad-2893aa719b81"> <input type="image" src="//content.authorize.net/images/buy-now-gray.gif"> </form>
             </div>
         </div>
     </nav>
@@ -145,7 +144,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="l5h3cRAHWGZB6bsouBSs02dp9zm48UnXF/+0Sfss5zRw+8RunM97UY3xV+mDhPyUTvKrfH5hpJyDrwqUqGiMLmGVBomicE+GHEE/LnsZ/shaS5jd8Z0ZNBQGWxp66o0r.YnRY/nBqHNEjJnCdCZhlSh4qnPGT1KdhbacywmtbzV/iScoS0vOwILS+h6w8ws4KrEgd/7+naWIL7c8DSgbi80NOTVXkyo1xw9fN8Bp042XPTgqMoI2tF6TXPZQpvcOU">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pieKRxOL6OGysgp8tfTlFijqW+hXNfXVYps37LsNELlyJUB6YsOtX5ls5bBDV7I08Pr9kmbRGoiO6igK+z0UOUYwbZKFu5NRPSaMDI1KGBou3EpLtRQ/RhqtnfMZn8zx.MOuuc4YoRfBdBVGSTMi018PWQIH0OfDqdMZoL5oxuqGdzStN172YbpvJvddizQUcLuH1ZCIFBdDKgjB3Nb9PbpplNter9aW/csBKlII2+BvseF7WPVmKWAMTPPoUwupJ">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
@@ -170,11 +169,11 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
