--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,6 @@
   
   <title>Live Channels</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -61,7 +60,7 @@
                     </li>
                     <li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#accordions1-g">FAQ</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary-outline display-4" href="index.html#pricing-table1-6"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>BUY NOW</a></div>
+                <form name="PrePage" method="post" action="https://Simplecheckout.authorize.net/payment/CatalogPayment.aspx"> <input type="hidden" name="LinkId" value="0c103a31-fd2a-4ab7-91ad-2893aa719b81"> <input type="image" src="//content.authorize.net/images/buy-now-gray.gif"> </form>
             </div>
         </div>
     </nav>
@@ -667,7 +666,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="X5ZYxVh7I+t5LGN6fvHDkl05Q1fsE6vWHd06tE42GfvU70iqPeHnD1l6KLZCY4eLCssi/cfHYpi7nEPpQc1wRWGSwBel74rI/eejSfJqbkY31fuV4fRsCG4Ou3jZG/nq.vu3R5uxnohyl9tXy7kzAfV1mRyFizRAd2Ih6Ba84yNax4WucwKO1r9ijdKdXkB0AQmAAS6uEFLwodqhBT786InNHIQ88WRxonDXC/vADyinRQEPbeu8DzUPhjCAmou85">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zVCp/V0xLMPGAWKDKvtUxs7tOxjFy8rGsv8gWWWERHWpBScdA12tp5nyd9at1xc838lPw4W5hmmw9L0zz5IjT4EoJne1uv5ciFGB16o5hP9tBjuOkeOoPaFpKIOq3oVk.zoa5KdLBghXOFtF6LMjMYpXuWPqIAsROw2gAApfLdCXYXHW8m+i4Bv6rD0kxb23FY2qDT68J2hQbNM8Iau0y1IYNgRbh4GO48XpcSuSDC5qOHJuovWuDF1gbyccg6M7M">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
@@ -692,12 +691,12 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
