create github pages

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   
   
   <title>Home</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -65,7 +65,7 @@
                     </li>
                     <li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#accordions1-g">FAQ</a></li></ul>
                 
-                <form name="PrePage" method="post" action="https://Simplecheckout.authorize.net/payment/CatalogPayment.aspx"> <input type="hidden" name="LinkId" value="0c103a31-fd2a-4ab7-91ad-2893aa719b81"> <input type="image" src="//content.authorize.net/images/buy-now-gray.gif"> </form>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary-outline display-4" href="index.html#pricing-table1-6"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>BUY NOW</a></div>
             </div>
         </div>
     </nav>
@@ -862,7 +862,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EAED5exm/uQ6cNdYLyY8xoqmBIIyqPFWFug0ElCGMRdhm4XMjfho1b5AhBYZvnUMqx6mr1faMICHc1KMG5Uk9m0qdY6p4132+E+hA5lJq4BxkBm7OV7D3O9SmJpmaOWQ.dRc/cRZbIPnsWJRYv4ItDh9UsCejY80hVir05O5wt5aPnnPrN0ualfgL2dAPtizfGtLg7G/PiuekSxQ8uJJoJ5zgMc5TzfXfH7E+IuUXy7t4kXhr6JXfH9XsUtXiJ5x8">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jXKLPO4TwQZlko+40QSJI2+iwhXihx7eHCLBji26fDRavYA0DOA2Cths63S9/c2Sjp1f4ZD3TTStPKZpfq0aCHgPippnMFgAyyMv8x90ea6fANOmnT/Xw2qJSnBBqnKX.5pJJCoQRL1pc6Hda5ClF2X9mRk05xScdOooSGG1wvv/r2Ko3tldMIP0/Umha0bCsVrScJnHSLKLKdCDCox2xEWVnFpME2whONljfJSzG7J9QuGBGfgOacoO7A1WxtK9X">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
