create github pages

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="container images-container container-fluid">
         <div class="row justify-content-center">
             <div class="col-md-12">
-                <h2 class="mbr-section-title mbr-semibold pb-3 mbr-white align-center mbr-fonts-style display-4">With AVM BOX service being the best in the USA comes great responsibility. Stability is one of the main factors of a top provider. Our channels list is incredibly stable, and by far the most reliable around. Our channels have an uptime of nearly 100%, so our customers will rarely have issues with broken links or video quality. We put in the extra work so that when you turn on your TV to watch, you can rely on us to get the job done. If there is ever an issue, you can always contact us onsupport email which is available most hours of the day.</h2>
+                <h2 class="mbr-section-title mbr-semibold pb-3 mbr-white align-center mbr-fonts-style display-4">With AVM BOX service being the best in the USA comes great responsibility. Stability is one of the main factors of a top provider. The Channel list is is incredibly stable, and by far the most reliable around. Our channels have an uptime of nearly 100%, so our customers will rarely have issues with broken links or video quality. We put in the extra work so that when you turn on your TV to watch, you can rely on us to get the job done. If there is ever an issue you can contact us via our support emai which is available most hours of the day.</h2>
                 
             </div>
             <div class="col-md-3 card">
@@ -296,7 +296,7 @@
         <div class="row">
             <div class="col-12 col-md-12 col-lg-7 pb-4">
                 <h4 class="main-subtitle align-center mbr-bold mbr-black mbr-fonts-style display-2">Tremendous titles in 4K HDR</h4>
-                <p class="mbr-section-text align-center mbr-regular mbr-black mbr-fonts-style display-7">We give our customers access to a full library of movies and series. Once a customer purchases our app they can go into a binge state from all of the titles that are offered. Shows that you have missed out on during the years are right at the tips of your finger now. We know what our customers want and we deliver every time.&nbsp;<br></p>
+                <p class="mbr-section-text align-center mbr-regular mbr-black mbr-fonts-style display-7">We give our customers access to a full library of movies and series. Once a customer purchases our app they can go into a binge state from all of the titles that are offered. Shows that you have missed out on during the years are at your finger tips now. We know what our customers want and we deliver every time.&nbsp;<br></p>
 
             </div>
         </div>
@@ -862,7 +862,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jXKLPO4TwQZlko+40QSJI2+iwhXihx7eHCLBji26fDRavYA0DOA2Cths63S9/c2Sjp1f4ZD3TTStPKZpfq0aCHgPippnMFgAyyMv8x90ea6fANOmnT/Xw2qJSnBBqnKX.5pJJCoQRL1pc6Hda5ClF2X9mRk05xScdOooSGG1wvv/r2Ko3tldMIP0/Umha0bCsVrScJnHSLKLKdCDCox2xEWVnFpME2whONljfJSzG7J9QuGBGfgOacoO7A1WxtK9X">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KpEGK17DQLc5750aG345CVGD2zl0cvRU1UW1ZnL0/cNrepY2Z1LeYs0h3yMi/Pw+FUtCtB1y1eXonUF8beJhrGXKvQdjcMySwoX++CP5upKkSOSIAgurJIVGWYiw7dTg.m5H06k1Zw9Wst0CI6//0o3uEn6XfFWvm+H9Kl+8fJj2sMjcsWCxKic30kq/JbvSZ/bXGgdWbFPTOAQXlkTAi3tkMxlZeBzKQQgNkmK+mlo0DWnt2/1hgyd2pIWSn0boA">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
