--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="container images-container container-fluid">
         <div class="row justify-content-center">
             <div class="col-md-12">
-                <h2 class="mbr-section-title mbr-semibold pb-3 mbr-white align-center mbr-fonts-style display-4">With AVM BOX service being the best in the USA comes great responsibility. Stability is one of the main factors of a top provider. The Channel list is is incredibly stable, and by far the most reliable around. Our channels have an uptime of nearly 100%, so our customers will rarely have issues with broken links or video quality. We put in the extra work so that when you turn on your TV to watch, you can rely on us to get the job done. If there is ever an issue you can contact us via our support emai which is available most hours of the day.</h2>
+                <h2 class="mbr-section-title mbr-semibold pb-3 mbr-white align-center mbr-fonts-style display-4">With AVM BOX service being the best in the USA comes great responsibility. Stability is one of the main factors of a top provider. The Channel list is is incredibly stable, and by far the most reliable around. Our channels have an uptime of nearly 100%, so our customers will rarely have issues with broken links or video quality. We put in the extra work so that when you turn on your TV to watch, you can rely on us to get the job done. If there is ever an issue you can contact us via our <a href="mailto:alternativevisualmedia@gmail.com">support email</a>.</h2>
                 
             </div>
             <div class="col-md-3 card">
@@ -862,7 +862,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KpEGK17DQLc5750aG345CVGD2zl0cvRU1UW1ZnL0/cNrepY2Z1LeYs0h3yMi/Pw+FUtCtB1y1eXonUF8beJhrGXKvQdjcMySwoX++CP5upKkSOSIAgurJIVGWYiw7dTg.m5H06k1Zw9Wst0CI6//0o3uEn6XfFWvm+H9Kl+8fJj2sMjcsWCxKic30kq/JbvSZ/bXGgdWbFPTOAQXlkTAi3tkMxlZeBzKQQgNkmK+mlo0DWnt2/1hgyd2pIWSn0boA">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oXVvCbgIBCovUmx7sQko6N5h2FWjD+8Xcdb9VB23VE1QnQpdbmZceEjjlEtlCm//38NZpnbhPzpiiXTWiEhOtyK0yx8CifIO7dGknffMvi75sDGPoN6JFUDtvIEO7CKJ.0XYjBnRfq/ATiqzdKJicxtO5rtJrYrmR1Fwr3CnaPjC3TJHC8WMz/ImUjl/53vfLzlecY7hYhIUEB/AtDMQY1g9T+3pppdDh0olWRiHQohPo6WL4nU7MpWvG++Jlbbku">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
@@ -899,7 +899,7 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
