create github pages

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                     </div>
                     <div class="card-box">
                         <h5 class="card-title mbr-semibold pb-2 mbr-white mbr-fonts-style display-5">Get the box</h5>
-                        <p class="price mbr-bold mbr-white mbr-fonts-style display-5">$129.99</p>
+                        <p class="price mbr-bold mbr-white mbr-fonts-style display-5">$24.99</p>
                         <div class="list-items pb-4">
                             <div class="item mbr-flex">
                                 <p class="item-text mbr-regular mbr-white mbr-fonts-style display-7">First Month Free<br></p>
@@ -497,7 +497,7 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
                             <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse2_13" aria-expanded="false" aria-controls="collapse2">
-                                <h4 class="mbr-regular mbr-fonts-style display-7">WHAT DO I NEED TO LOOK FOR TV?</h4>
+                                <h4 class="mbr-regular mbr-fonts-style display-7">WHAT DO I NEED TO OPERATE THE AVM BOX?</h4>
                                 <span class="sign mbr-iconfont mbri-plus inactive"></span>
                             </a>
 
@@ -524,42 +524,31 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
                             <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse4_13" aria-expanded="false" aria-controls="collapse4">
-                                <h4 class="mbr-regular mbr-fonts-style display-7">CAN I USE THE IPTV AS I LIVE IN AN APARTMENT?</h4>
+                                <h4 class="mbr-regular mbr-fonts-style display-7">WHY I CAN’T ACCESS MY ACCOUNT?</h4>
                                 <span class="sign mbr-iconfont mbri-plus inactive"></span>
                             </a>
                         </div>
                         <div id="collapse4_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                             <div class="panel-body">
-                                <p class="mbr-fonts-style mbr-regular mbr-text panel-text display-7">Yes, AVM BOX is perfect for people who live in an apartment! AVM BOX works well everywhere with high-speed internet, including apartment buildings or high-rise buildings, or as a satellite TV dish cannot be installed at your home. Often traveling? Take the AVM BOX, and watch your favorite programs on the go or at the temporary destination.</p>
+                                <p class="mbr-fonts-style mbr-regular mbr-text panel-text display-7">First, please check your network connection, reboot your router and device, and then try again.
+<br>Secondly, if your network connection is no problem, please check whether your account is used on other devices. as you can view from more than 1 device at the same time.</p>
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
                             <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse5_13" aria-expanded="false" aria-controls="collapse5">
-                                <h4 class="mbr-regular mbr-fonts-style display-7">WHY I CAN’T ACCESS MY ACCOUNT?</h4>
+                                <h4 class="mbr-regular mbr-fonts-style display-7">I AM NOT IN OR FROM USA/CAN OR THE UK. CAN I STILL SUBSCRIBE?</h4>
                                 <span class="sign mbr-iconfont mbri-plus inactive"></span>
                             </a>
                         </div>
                         <div id="collapse5_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                             <div class="panel-body">
-                                <p class="mbr-fonts-style mbr-regular mbr-text panel-text display-7">First, please check your network connection, reboot your router and device, and then try again.<br>Secondly, if your network connection is no problem, please check whether your account is used on other devices. as you can view from more than 1 device at the same time.</p>
+                                <p class="mbr-fonts-style mbr-regular mbr-text panel-text display-7">Yes. Our service is available worldwide to everyone. Subscribe here.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse6_13" aria-expanded="false" aria-controls="collapse6">
-                                <h4 class="mbr-regular mbr-fonts-style display-7">I AM NOT IN OR FROM USA/CAN OR THE UK. CAN I STILL SUBSCRIBE?</h4>
-                                <span class="sign mbr-iconfont mbri-plus inactive"></span>
-                            </a>
-                        </div>
-                        <div id="collapse6_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
-                            <div class="panel-body">
-                                <p class="mbr-fonts-style mbr-regular mbr-text panel-text display-7">Yes. Our service is available worldwide to everyone. <a href="index.html#pricing-table1-6">Subscribe here.</a></p>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -862,7 +851,7 @@
                     inbox!</h4>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oXVvCbgIBCovUmx7sQko6N5h2FWjD+8Xcdb9VB23VE1QnQpdbmZceEjjlEtlCm//38NZpnbhPzpiiXTWiEhOtyK0yx8CifIO7dGknffMvi75sDGPoN6JFUDtvIEO7CKJ.0XYjBnRfq/ATiqzdKJicxtO5rtJrYrmR1Fwr3CnaPjC3TJHC8WMz/ImUjl/53vfLzlecY7hYhIUEB/AtDMQY1g9T+3pppdDh0olWRiHQohPo6WL4nU7MpWvG++Jlbbku">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler px-2" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3ea3IgGjH78u9nUuVevm9I95naE9gTqTa6qPnuMXXqaHb8CIFS/IsUorBQ3zPRB9zMl2ut9s1Ll9C4UzLQMlfkQe0F1/WYQq/DU2QBF2YIFn8zgDfUq6kQKSbEcTDqg7.V+0FAUr6Ri2q2sosfxAVIhGm+8jVsq+b1b6kAkCKMrp0ND1/AY0CtassUsKSNT5cZtdPCg/R7os/D4kd9BgOvf0Kl1mlTozDv1/WvYi+B+lqx6+bwF8c0QYydYcAPck3">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
